update specification according #3 and regeneration of python-flask stub.
