# specification/openapi.yaml
@@ -17,9 +17,14 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/FlavorGPU"
+                properties:
+                  flavors:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/FlavorGPU"
+                  timestamp:
+                    type: string
+                    format: date-time
 
   /gpus/flavors/{flavor_openstack_id}:
     get:
@@ -44,7 +49,12 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/FlavorGPU"
+                properties:
+                  flavor:
+                    $ref: "#/components/schemas/FlavorGPU"
+                  timestamp:
+                    type: string
+                    format: date-time
 
 
         
